@@ -175,8 +175,7 @@ counted as inside.
 Rect.colliderect(rectstyle) -> bool
 </tt></font><ul>
 Returns true if any area of the two rectangles
-overlaps. If rectangles only share an edge, they
-will be counted as overlapping.
+overlaps.
 </ul><br>&nbsp;<br>
 
 <a name=contains><font size=+2><b>contains
